# suai-protei-course-cpp-autumn-2023

./: .gitignore  README.md
json-schemas/: subscriber_data_schema.json
locator/: CMakeLists.txt  area.cpp  area.h  area_class_tests.cpp  locator.cpp  locator.h  main.cpp  proximity_trigger.cpp  proximity_trigger.h  subscriber.cpp  subscriber.h  zone.cpp  zone.h  zone_trigger.cpp  zone_trigger.h
locator-project/: CMakeLists.txt
locator-project/apps/: CMakeLists.txt  main.cpp
locator-project/data/data-examples/: subscriber_data_example.json
locator-project/src/: CMakeLists.txt
locator-project/src/lib-locator/: CMakeLists.txt  lib_locator.cpp  lib_locator.hpp
locator-project/src/proto-gen/: CMakeLists.txt
locator-project/src/subscriber/: CMakeLists.txt  proximity_trigger.cpp  proximity_trigger.hpp  subscriber.cpp  subscriber.hpp
locator-project/src/zone/: CMakeLists.txt  zone.cpp  zone.hpp  zone_trigger.cpp  zone_trigger.hpp
locator-project/tests/: unit_tests.cpp
task-1/: CMakeLists.txt  hello_test.cpp
